home screen and header component

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0-294.0.dev <4.0.0'
+  sdk: '>=3.0.7 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+#  badges: ^3.1.1
   flutter:
     sdk: flutter
 
@@ -37,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.1
   flutter_snake_navigationbar: ^0.6.1
+  badges: ^2.0.2
 
 dev_dependencies:
   flutter_test:
